Include bootstrap and bootstrap css. Adjust existing css to clean up

--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,14 @@
 .read-the-docs {
   color: #888;
 }
+
+.form {
+  width: 15em;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.form-item {
+  margin: 1em;
+}
